sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:28: error: Unmatched closing brace '}' ignored here
}
^